# NEWorldOld

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Config.txt  Make.bat  MultiPlayerGameMenu.cpp  MultiPlayerGameMenu.h  NEWorld.ipdb  NEWorld.layout  NEWorld.sln  NEWorld.vcxproj  NEWorld.vcxproj.filters  NEWorld_private.h  NEWorld_private.rc  README.md  bin2h.py  keyslsetting.txt  vcpkg-configuration.json  vcpkg.json  xmake.lua  ~AutoRecover.NEWorld.vcxproj
.github/workflows/: build.yml  cmake-multi-platform.yml
Assets/GUI/: MainMenu.xaml
Assets/Shaders/: Main.fsh  Main.vsh
Assets/Translations/: Keys.json  Langs.txt  en_US.lang  zh_TW.lang
Configs/: options.ini
Lang/: CHS.lang  ENG.lang  Keys.lk  en_US.lang  zh_CN.lang  zh_TW.lang
NEWorld Universal/: NEWorld Universal.sln
NEWorld.Base/Common/: Console.cpp  Console.h  Logger.cpp  Logger.h
NEWorld.Base/Math/: Vector2.h  Vector3.h
NEWorld.Base/System/: FileSystem.h  MessageBus.cpp  MessageBus.h  PmrBase.h  Registry.h
NEWorld.Game/: AudioSystem.cpp  Definitions.cpp  Definitions.h  Effect.cpp  Effect.h  FunctionsKit.cpp  GUI.cpp  GUI.h  GameView.cpp  GameView.h  Globalization.cpp  Globalization.h  Hitbox.cpp  Hitbox.h  Items.cpp  Menus.h  NEWorld.cpp  Object.h  OnlinePlayer.cpp  OnlinePlayer.h  Particles.cpp  Particles.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Setup.cpp  Shader.cpp  TextRenderer.cpp  TextRenderer.h  Textures.cpp  Textures.h  Typedefs.h  resource.rc  stdinclude.h
NEWorld.Game/Audio/: Audio.cpp  Audio.h
NEWorld.Game/GUI/: GUI.cpp  GUI.h
NEWorld.Game/Menus/: CreateWorldMenu.cpp  Information.cpp  LanguageMenu.cpp  MainMenu.cpp  ShaderOptionsMenu.cpp  SoundMenu.cpp  WorldMenu.cpp
NEWorld.Game/Universe/: CommandHandler.h  Game.h
NormalWorldGen/NormalWorldGen/: NormalWorldGen.vcxproj
Resources/Shaders/: Main.fsh  Main.vsh  MergeSurface.fsh  MergeSurface.vsh  Shadow.fsh  Shadow.vsh
Server/: NEWorldServer.vcxproj
Server/NEWorldServer/: NEWorldServer.vcxproj  NEWorldServer.vcxproj.filters
Server/Source/: Console.cpp  Console.h  Main.cpp  Network.h
Shaders/: Base.fsh  DebugShadow.vsh  Default.fsh  Default.vsh  Depth.fsh  Depth.vsh  Final.fsh  Final.vsh  Main.fsh  Main.psh  Main.vsh  MergeSurface.fsh  MergeSurface.vsh  Opaque.fsh  Opaque.vsh  RenderShadowMap.fsh  RenderShadowMap.vsh  Shadow.fsh  Shadow.vsh  ShowDepth.fsh  ShowDepth.vsh  Translucent.fsh  Translucent.vsh  _Main.fsh  _Main.vsh  debug_shadow.fsh  ui.fsh
Textures/Lang/: CHS.lang  ENG.lang  Keys.lk
WorldGens/NormalWorldGen/: NormalWorldGen.cpp  NormalWorldGen.vcxproj.filters
cmake/: CppcheckCodeAnalysis.cmake  Findglfw3.cmake  TargetDefaultCompileOptions.cmake
docs/: block_updates.md  worlds.md
include/: DYTDataStorage.h  ft2build.h
include/AL/: AL-EFX.cpp  AL-EFX.h  ALDevice.cpp  ALDevice.h  Framework.cpp  LoadOAL.h  xram.h
include/GL/: glext.h
include/OptiX/: optix.h  optix_cuda_interop.h  optix_device.h  optix_host.h
include/freetype/: freetype.h
include/pthread/: pthread.h
include/wx/: platform.h
lang/: en_US.lang  keys.lk  zh_CN.lang  zh_TW.lang
lib/Debug_lib/: glfw3.lib
lib/Release_lib/: glfw3.lib
lib/wx/: wxbase31u_net.lib  wxbase31u_xml.lib  wxbase31ud_net.lib  wxbase31ud_xml.lib  wxexpat.lib  wxexpatd.lib  wxjpeg.lib  wxjpegd.lib  wxmsw31u_gl.lib  wxmsw31u_media.lib  wxmsw31u_qa.lib  wxmsw31u_stc.lib  wxmsw31u_webview.lib  wxmsw31ud_gl.lib  wxmsw31ud_media.lib  wxmsw31ud_qa.lib  wxpng.lib  (+9 more)
lib64/: freetype2.lib  optix.1.lib  optix_prime.1.lib  optixu.1.lib
libraries/: Netycat.lib  Netycatd.lib  freetype2.lib
locale/: en_US.json  zh_Hans.json  zh_Hant.json
shaders/: debug_shadow.fsh  debug_shadow.vsh  default.fsh  default.vsh  filter.fsh  filter.vsh  final.fsh  final.vsh  opaque.fsh  opaque.vsh  shadow.fsh  shadow.vsh  translucent.fsh  translucent.vsh  ui.fsh  ui.vsh
source/: API.cpp  API.h  AudioSystem.cpp  AudioSystem.h  Blocks.h  ByteOrder.h  CMakeLists.txt  Camera.h  Chunk.cpp  Chunk.h  ChunkIndexArray.cpp  ChunkIndexArray.h  ChunkPacket.h  ChunkPtrArray.cpp  ChunkPtrArray.h  ChunkRenderer.cpp  ChunkRenderer.h  Command.h  CreateWorldMenu.cpp  Definitions.cpp  Definitions.h  Effect.cpp  Effect.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  FrustumTest.cpp  FrustumTest.h  FunctionsKit.cpp  FunctionsKit.h  GLProc.cpp  GLProc.h  GUI.cpp  GUI.h  GUIOptions.cpp  GUIOptionsMenu.cpp  GameManager.cpp  (+83 more)
source/Math/: Vector2.h  Vector3.h
source/Menus/: CreateWorldMenu.cpp  GUIOptionsMenu.cpp  LanguageMenu.cpp  MainMenu.cpp  OptionsMenu.cpp  RenderOptionsMenu.cpp  ShaderOptionsMenu.cpp  WorldMenu.cpp
source/Render/: Layout.h
source/Renderer/GL/: ChunkVertexHolder.cpp  ChunkVertexHolder.h
source/Renderer/World/: ChunkRenderer.cpp  ChunkRenderer.h  WorldRenderer.cpp  WorldRenderer.h
source/Universe/: CommandHandler.h  Game.h
source/Universe/World/: BlockRegistry.cpp  BlockRegistry.h  Blocks.cpp  Blocks.h  Chunk.cpp  Chunk.h  ChunkPtrArray.h  HeightMap.h  World.cpp  World.h  WorldGen.cpp  WorldGen.h
source/Universe/World/Data/: ChunkStorage.h  ChunkStorageL1.cpp
source/Utilities/: SequenceAllocator.h
source/Utilities/Threading/: Semaphore.h  SpinLock.h  SpinWait.cpp  SpinWait.h  Timings.cpp  Timings.h
source/Utilities/Threading/Micro/: Promise.cpp  Promise.h  ThreadPool.cpp  ThreadPool.h
source/math/: vector.h
source/utils/: exception.h  filesystem.h  json.hpp  jsonhelper.h  strings.h  stringutils.h
src/: Blocks.h  Chunk.cpp  Chunk.h  ChunkPtrArray.cpp  ChunkPtrArray.h  ChunkRenderer.cpp  ChunkRenderer.h  Command.h  CreateWorldMenu.cpp  Definitions.cpp  Definitions.h  Framebuffer.cpp  Framebuffer.h  FrustumTest.cpp  FrustumTest.h  FunctionsKit.cpp  FunctionsKit.h  GUI.cpp  GUI.h  GUIOptionsMenu.cpp  GameMenu.cpp  Globalization.cpp  Globalization.h  HeightMap.cpp  HeightMap.h  Hitbox.cpp  Hitbox.h  LanguageMenu.cpp  MainMenu.cpp  Mat4.h  Menus.h  NEWorld.cpp  OptionsMenu.cpp  Particles.cpp  Particles.h  Player.cpp  Player.h  RenderOptionsMenu.cpp  Renderer.cpp  Renderer.h  (+62 more)
(+159 files in other folders)
